tests/regression/errors/basic/syntax_error_2.csd
// Syntax error test 2 - missing semicolon
sus x drip = 2
sus y drip = x +   // Missing operand
vibez.spill("This should not execute")
